# Maverick

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  comprun.sh  readme.md  sfml_basics.cpp  sfmlb
assets/fonts/: cybfont.fnt  mavfont.fnt  mavwhite.fnt
src/: Cyberena.cpp  Cyberena.hpp  TEC.cpp  TEC.hpp
src/Ability/: Ability.hpp
src/Animation/: .Animation.cpp.swp  Animation.cpp  Animation.hpp
src/Animation/Hitbox/: Hitbox.cpp  Hitbox.hpp  HitboxCollision.cpp  HitboxCollision.hpp
src/Animation/SpriteHash/: SpriteHash.cpp  SpriteHash.hpp
src/Animation/TextureHash/: TextureHash.cpp  TextureHash.hpp
src/Arena/: Arena.cpp  Arena.hpp
src/Armor/: Armor.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/Control/: Control.cpp  Control.hpp
src/Cyberena/: CMakeLists.txt  Cyberena.cpp
src/Cyberena/Arena/: Arena.hpp
src/Cyberena/Entity/Object/: Object.hpp
src/Cyberena/Entity/Object/Character/: Character.cpp  Character.hpp
src/Cyberena/Entity/Object/Character/Race/: Race.cpp
src/Cyberena/Entity/Object/Character/Style/: Style.hpp
src/Cyberena/Entity/Object/GlassBall/: GlassBall.cpp
src/Cyberena/Entity/Object/LoadingZone/: LoadingZone.cpp
src/Cyberena/Entity/Object/Weapon/: Weapon.hpp
src/Cyberena/Entity/UI/: UIElement.hpp
src/Cyberena/Factory/: Factory.cpp  Factory.hpp
src/Cyberena/FileHandler/: FileHandler.hpp
src/Cyberena/FileHandler/Loader/: Loader.cpp  Loader.hpp
src/Cyberena/FileHandler/Saver/: Saver.cpp  Saver.hpp
src/Cyberena/Object/: Object.hpp
src/Cyberena/Object/Character/: Character.cpp  Character.hpp
src/Cyberena/Object/Character/Race/: Race.hpp
src/Cyberena/Object/GlassBall/: GlassBall.cpp  GlassBall.hpp
src/Cyberena/Object/Item/: Item.cpp  Item.hpp
src/Cyberena/Object/LoadingZone/: LoadingZone.cpp  LoadingZone.hpp
src/Cyberena/Object/Weapon/: Weapon.hpp
src/Cyberena/UIElement/: UIElement.hpp
src/Cyberena/Zones/: ZoneLoader.cpp
src/Cyberena/Zones/FilterTest/: FilterTest.cpp  FilterTest.hpp
src/Cyberena/Zones/TestZone/: TestZone.cpp  TestZone.hpp
src/Cyberena/Zones/ZoneFactory/: ZoneFactory.cpp  ZoneFactory.hpp
src/Cyberena/Zones/global/: global.cpp  global.hpp
src/Engine/: Engine.cpp  Engine.hpp
src/Entity/: Entity.cpp  Entity.hpp
src/Entity/Object/: Object.cpp  Object.hpp
src/Factory/: Factory.cpp  Factory.hpp
src/HashTable/: HashTable.hpp
src/Item/: Item.hpp
src/Maverick/: CMakeLists.txt  Maverick.cpp  Maverick.hpp
src/Maverick/Animation/: Animation.cpp  Animation.hpp
src/Maverick/Animation/Hitbox/: Hitbox.cpp  Hitbox.hpp  HitboxCollision.cpp
src/Maverick/Animation/Hitbox/HitEllipse/: HitEllipse.cpp  HitEllipse.hpp
src/Maverick/Animation/Hitbox/HitEllipse/HitCone/: HitCone.cpp  HitCone.hpp
src/Maverick/Animation/Hitbox/HitRect/: HitRect.cpp  HitRect.hpp
src/Maverick/Audio/: Audio.cpp  Audio.hpp  SoundBoard.cpp  SoundBoard.hpp
src/Maverick/Audio/Music/: Music.cpp  Music.hpp
src/Maverick/Audio/SoundBoard/: SoundBoard.cpp  SoundBoard.hpp
src/Maverick/Camera/: Camera.cpp  Camera.hpp
src/Maverick/Control/: Control.cpp  Control.hpp
src/Maverick/Engine/: Engine.cpp  Engine.hpp
src/Maverick/Entity/: Entity.cpp  Entity.hpp
src/Maverick/Entity/Object/: Object.cpp  Object.hpp
src/Maverick/Entity/Object/CameraReference/: CameraReference.cpp  CameraReference.hpp
src/Maverick/Entity/Object/LoadingZone/: LoadingZone.cpp
src/Maverick/Entity/UI/: UIElement.cpp  UIElement.hpp
src/Maverick/Entity/UI/UIBorders/: UIBorders.cpp  UIBorders.hpp
src/Maverick/Entity/UI/UIObjectFrame/: UIObjectFrame.cpp  UIObjectFrame.hpp
src/Maverick/Entity/UI/UIScreenBlit/: UIScreenBlit.cpp  UIScreenBlit.hpp
src/Maverick/Entity/UI/UITabbedWindow/: UITabbedWindow.cpp  UITabbedWindow.hpp
src/Maverick/Entity/UI/UIText/: UIText.cpp  UIText.hpp
src/Maverick/Entity/UI/UITextBox/: UITextBox.cpp  UITextBox.hpp
src/Maverick/FileHandler/Loader/: Loader.cpp  Loader.hpp
src/Maverick/FileHandler/Saver/: Saver.cpp  Saver.hpp
src/Maverick/Filter/: Filter.cpp  Filter.hpp
src/Maverick/Filter/ColorFilter/: ColorFilter.cpp  ColorFilter.hpp
src/Maverick/FlatBuffers/Assets/: Asset.fbs  Font.fbs  Music.fbs  Sound.fbs  Sprite.fbs  Surface.fbs
src/Maverick/FlatBuffers/Levels/: Entity.fbs  Level.fbs
src/Maverick/Font/: Font.cpp  Font.hpp
src/Maverick/Global/: Global.hpp
src/Maverick/HashTable/: HashTable.cpp  HashTable.hpp
src/Maverick/HashTable/AttributeHash/: AttributeHash.cpp  AttributeHash.hpp
src/Maverick/HashTable/FontHash/: FontHash.cpp  FontHash.hpp
src/Maverick/HashTable/MusicHash/: MusicHash.cpp  MusicHash.hpp
src/Maverick/HashTable/SoundHash/: SoundHash.cpp  SoundHash.hpp
src/Maverick/HashTable/SpriteHash/: SpriteHash.cpp  SpriteHash.hpp
src/Maverick/HashTable/TextureHash/: TextureHash.cpp  TextureHash.hpp
src/Maverick/Object/: Object.cpp  Object.hpp
src/Maverick/Object/CameraReference/: CameraReference.cpp  CameraReference.hpp
src/Maverick/Text/: Text.cpp  Text.hpp
src/Maverick/UIElement/: UIElement.cpp  UIElement.hpp
src/Maverick/UIElement/UIBorders/: UIBorders.cpp  UIBorders.hpp
src/Maverick/UIElement/UIObjectFrame/: UIObjectFrame.cpp  UIObjectFrame.hpp
src/Maverick/UIElement/UITabbedWindow/: UITabbedWindow.cpp  UITabbedWindow.hpp
src/Maverick/UIElement/UIText/: UIText.cpp  UIText.hpp
src/Maverick/UIElement/UITextBox/: UITextBox.cpp  UITextBox.hpp
src/Maverick/Utility/: Utility.hpp
src/Maverick/Zone/: Zone.cpp  Zone.hpp
src/Maverick/Zone/ZoneFactory/: ZoneFactory.cpp  ZoneFactory.hpp  ZoneIncludes.hpp
src/Object/: Object.cpp  Object.hpp
src/Object/UI/: TODO  (+2 more)
src/Test/Maverick/: CMakeLists.txt  TestAnimation.cpp  TestCamera.cpp  TestCollision.cpp  TestGlobal.cpp
src/Weapon/: Weapon.hpp
src/Zone/: Zone.cpp  Zone.hpp
src/aed/: CMakeLists.txt  aed.cpp  aed.hpp
src/led/: CMakeLists.txt  led.cpp
src/led/Entity/UI/UILevelPort/: UILevelPort.cpp  UILevelPort.hpp
src/led/UIElement/UILevelPort/: UILevelPort.cpp  UILevelPort.hpp
src/led/Zones/led/: led.cpp  led.hpp
src/red/: CMakeLists.txt  red.cpp  red.hpp
utility/: bump.sh  performance.sh
(+44 files in other folders)
